--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
             <% } %>
             <% if (lastPage == null) { %>
-                <a href="/?page=<%= lastPage %>" class="pagination"> Back &gt;</a>
+                <a href="/?page=<%= lastPage %>" class="pagination pagination-back"> Back to beginning &gt;</a>
             <% } %>
         </div>
     </section>
