--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer">
    <div class="footer__copy">
-    &copy; <%= new Date().getFullYear(); %> &hearts; Kate Blbn - Built with NodeJs & MongoDB
+    &copy; <%= new Date().getFullYear(); %> &hearts; <a href="mailto:kate.blbn@gmail.com">Kate Blbn</a>  - Built with NodeJs & MongoDB
    </div> 
 </footer>
