--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,9 +204,13 @@ textarea {
     color: var(--grey);
     margin-top: 40px;
     display: inline-block;
+
 }
 .pagination:hover {
     color: var(--light-grey);
+}
+.pagination-back {
+margin: 0 auto;
 }
 
 /* ABOUT */
